--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass": "^1.77.8"
   },
   "scripts": {
+    "start" : "node index.js",
     "build-css": "sass --no-source-map scss/styles.scss public/css/styles.css",
     "watch-css": "sass --watch --no-source-map scss/styles.scss public/css/styles.css"
   },
